Merge attempt with tDAR-stable