@@ -36,14 +36,19 @@ import org.tdar.filestore.tasks.Task.AbstractTask;
  * 
  */
 public class ImageThumbnailTask extends AbstractTask {
-    public static final String FMT_ERROR_PROCESSING_COULD_NOT_OPEN = "%s is either corrupt or uses an invalid format (error:\"%s\")";
+
+    private static final String UTF_8 = "UTF-8";
+    private static final String _SM = "_sm";
+    private static final String _MD = "_md";
+    private static final String _LG = "_lg";
     private static final long serialVersionUID = -108766461810056577L;
     private static final String JPG_FILE_EXT = ".jpg";
     public static final int LARGE = 600;
     public static final int MEDIUM = 300;
     public static final int SMALL = 96;
-    transient ImagePlus ijSource;
+    private transient ImagePlus ijSource;
     private boolean jaiImageJenabled = true;
+
     /*
      * public static void main(String[] args) {
      * ImageThumbnailTask task = new ImageThumbnailTask();
@@ -59,7 +64,7 @@ public class ImageThumbnailTask extends AbstractTask {
      * try {
      * task.run(vers);
      * } catch (Exception e) {
-     * throw new TdarRecoverableRuntimeException("an image processing error ocurred", e);
+     * throw new TdarRecoverableRuntimeException('an image processing error ocurred', e);
      * }
      * }
      */
@@ -75,11 +80,10 @@ public class ImageThumbnailTask extends AbstractTask {
         processImage(version, version.getTransientFile());
     }
 
-
     public void processImage(InformationResourceFileVersion version, File sourceFile) {
-        if (sourceFile == null || !sourceFile.exists()) {
+        if ((sourceFile == null) || !sourceFile.exists()) {
             getWorkflowContext().setErrorFatal(true);
-            throw new TdarRecoverableRuntimeException("File does not exist");
+            throw new TdarRecoverableRuntimeException("error.file_not_found");
         }
         String filename = sourceFile.getName();
         getLogger().debug("sourceFile: " + sourceFile);
@@ -104,8 +108,8 @@ public class ImageThumbnailTask extends AbstractTask {
         if (StringUtils.isNotBlank(msg)) {
             getLogger().error(msg);
         }
-        
-        if (isJaiImageJenabled() && ijSource == null) {
+
+        if (isJaiImageJenabled() && (ijSource == null)) {
             getLogger().debug("Unable to load source image with ImageJ: " + sourceFile);
             try {
                 // http://sourceforge.net/projects/ij-plugins/files/ij-imageio/v.1.2.4/
@@ -115,15 +119,14 @@ public class ImageThumbnailTask extends AbstractTask {
                 getLogger().error("could not open image with ImageJ-ImageIO" + sourceFile, e);
             }
         }
-        
+
         if (ijSource == null) {
             getLogger().debug("Unable to load source image: " + sourceFile);
             if (!msg.contains("Note: IJ cannot open CMYK JPEGs")) {
                 getWorkflowContext().setErrorFatal(true);
             }
 
-            String errorMessage = String.format(FMT_ERROR_PROCESSING_COULD_NOT_OPEN, filename, msg);
-            throw new TdarRecoverableRuntimeException(errorMessage);
+            throw new TdarRecoverableRuntimeException("imageThumbnailTask.fmt_error_processing_could_not_open", Arrays.asList(filename, msg));
         } else {
             if (getWorkflowContext().getResourceType().hasDemensions()) {
                 version.setHeight(ijSource.getHeight());
@@ -131,12 +134,16 @@ public class ImageThumbnailTask extends AbstractTask {
                 version.setUncompressedSizeOnDisk(ImageThumbnailTask.calculateUncompressedSize(version));
             }
             try {
+                Thread.yield();
                 createJpegDerivative(version, ijSource, filename, MEDIUM, false);
+                Thread.yield();
                 createJpegDerivative(version, ijSource, filename, LARGE, false);
+                Thread.yield();
                 createJpegDerivative(version, ijSource, filename, SMALL, false);
+                Thread.yield();
             } catch (Throwable e) {
                 getLogger().error("Failed to create jpeg derivative", e);
-                throw new TdarRecoverableRuntimeException("processing error", e);
+                throw new TdarRecoverableRuntimeException("imageThumbnailTask.processingError", e);
             }
         }
     }
@@ -147,20 +154,20 @@ public class ImageThumbnailTask extends AbstractTask {
 
         switch (resolution) {
             case LARGE:
-                outputFilename += "_lg";
+                outputFilename += _LG;
                 break;
             case MEDIUM:
-                outputFilename += "_md";
+                outputFilename += _MD;
                 break;
             case SMALL:
-                outputFilename += "_sm";
+                outputFilename += _SM;
                 break;
             default:
                 outputFilename += "_" + resolution;
         }
         outputFilename += JPG_FILE_EXT;
         try {
-            outputFilename = URLEncoder.encode(outputFilename, "UTF-8");
+            outputFilename = URLEncoder.encode(outputFilename, UTF_8);
         } catch (Exception e) {
             getLogger().debug("exception writing derivative image:", e);
         }
@@ -171,10 +178,11 @@ public class ImageThumbnailTask extends AbstractTask {
 
     protected float getScalingRatio(int sourceWidth, int sourceHeight, int resolution) {
         float ratio;
-        if (sourceWidth >= sourceHeight)
-            ratio = (float) ((float) resolution / (float) sourceWidth);
-        else
-            ratio = (float) ((float) resolution / (float) sourceHeight);
+        if (sourceWidth >= sourceHeight) {
+            ratio = (float) resolution / (float) sourceWidth;
+        } else {
+            ratio = (float) resolution / (float) sourceHeight;
+        }
 
         return ratio;
     }
@@ -219,15 +227,16 @@ public class ImageThumbnailTask extends AbstractTask {
                 // First interpolate to this size, then use the new image for scaling to all the smaller sizes
                 ip.setInterpolate(true);
                 ip.smooth();
-                ip = ip.resize((int) Math.round(ip.getWidth() * scalingRatio),
-                        (int) Math.round(ip.getHeight() * scalingRatio));
+                ip = ip.resize(Math.round(ip.getWidth() * scalingRatio),
+                        Math.round(ip.getHeight() * scalingRatio));
             } else {
                 ip = averageReductionScale(ip, ijSource, resolution);
             }
 
             // ip is now a scaled image processor
-            if (resolution != SMALL)
+            if (resolution != SMALL) {
                 ip.sharpen();
+            }
 
             // Get the destination width and height.
             int destWidth = ip.getWidth();
@@ -280,12 +289,13 @@ public class ImageThumbnailTask extends AbstractTask {
         double product = xshrink * xshrink;
         int samples;
 
-        if (source.getBitDepth() == 32)
+        if (source.getBitDepth() == 32) {
             return null;
+        }
 
         samples = (ip instanceof ColorProcessor) ? 3 : 1;
-        int w = (int) ((double) ip.getWidth() / dxshrink);
-        int h = (int) ((double) ip.getHeight() / dxshrink);
+        int w = (int) (ip.getWidth() / dxshrink);
+        int h = (int) (ip.getHeight() / dxshrink);
         ImageProcessor ip2 = ip.createProcessor(w, h);
         for (int y = 0; y < h; y++) {
             for (int x = 0; x < w; x++) {
@@ -308,13 +318,15 @@ public class ImageThumbnailTask extends AbstractTask {
 
         for (int y2 = 0; y2 < xshrink; y2++) {
             for (int x2 = 0; x2 < xshrink; x2++) {
-                pixel = ip.getPixel(x * xshrink + x2, y * xshrink + y2, pixel);
-                for (int i = 0; i < samples; i++)
+                pixel = ip.getPixel((x * xshrink) + x2, (y * xshrink) + y2, pixel);
+                for (int i = 0; i < samples; i++) {
                     sum[i] += pixel[i];
+                }
             }
         }
-        for (int i = 0; i < samples; i++)
-            sum[i] = (int) (sum[i] / product + 0.5d);
+        for (int i = 0; i < samples; i++) {
+            sum[i] = (int) ((sum[i] / product) + 0.5d);
+        }
         return sum;
     }
 
